fix: sidescroll layout issue on mobile

--- a/src/pages/AppLayout.module.css
+++ b/src/pages/AppLayout.module.css
@@ -2,6 +2,7 @@
 	height: 100vh;
 	overscroll-behavior-y: none;
 	position: relative;
+	margin: 0 auto;
 }
 .circle1 {
 	position: absolute;
@@ -12,7 +13,7 @@
 	background-color: transparent;
 	border: 8px solid var(--color-accent);
 	border-radius: 50%;
-	z-index: -1;
+	z-index: -3;
 	filter: blur(8px);
 	pointer-events: none;
 }
@@ -53,7 +54,7 @@
 		width: 280px;
 		height: 220px;
 		left: -35%;
-		top: 90%;
+		top: 60%;
 		border-width: 4px;
 	}
 
